[gd_scene load_steps=6 format=3 uid="uid://wjdn27dcpwpm"]

[ext_resource type="Script" uid="uid://dhs7akpdnthb5" path="res://Main.gd" id="1_glv2v"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_glv2v"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_uu6xs"]
sky_material = SubResource("ProceduralSkyMaterial_glv2v")

[sub_resource type="Environment" id="Environment_r0du0"]
background_mode = 2
background_color = Color(0.169245, 0.169245, 0.169245, 1)
sky = SubResource("Sky_uu6xs")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="SphereMesh" id="SphereMesh_glv2v"]
radius = 0.08
height = 0.08

[node name="Main" type="Node3D"]
script = ExtResource("1_glv2v")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, 0.433013, -0.25, 0, 0.5, 0.866025, 0.5, -0.75, 0.433013, 0, 2.69985, 3)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_r0du0")

[node name="Indicator" type="MeshInstance3D" parent="."]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, -0.65, 1.8, 0)
cast_shadow = 0
mesh = SubResource("SphereMesh_glv2v")

[node name="PriceLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 0.9, 1.5)

[node name="History" type="Node3D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DebugPanel" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="FetchingLabel" type="Label" parent="CanvasLayer2"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
